--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,79 @@
+/* style reset */
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    list-style: none;
+    box-sizing: border-box;
+    
+}
+
+body {
+    min-height: 150vh;
+    font-size: 10px;
+    min-width: 1028px;
+}
+
+/* MENU */
+.menu {
+    position: fixed;
+    left:10px;
+    top: 15px;
+    font-size: 3.5em;
+    transition: .2s linear;
+    color: #333;
+}
+
+nav {
+    position: relative;
+    left: 0;
+    right: 0;
+    height: 50px;
+    top: -40px;
+    background-color: #333;
+    transition: .2s linear;
+}
+
+.menu.on {
+    top: 55px;
+}
+
+nav.on {
+    top: 0;
+}
+
+ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+li {
+    flex-basis: 15%;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
+
+li a {
+    display: block;
+    color:aliceblue;
+    line-height: 28px;
+    font-size: 1.5em;
+    letter-spacing: 5px;
+    opacity: 0.5;
+    font-weight: bold;
+
+}
+li:hover a {
+    opacity: 1;
+}
+
+li:hover {
+    border: 1px solid aliceblue;
+    box-shadow: 0px 0px 3px 3px rgba(229, 228, 228, 0.2);
+    opacity: 0.8;
 }
