--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 nav {
-    position: relative;
+    position: fixed;
     left: 0;
     right: 0;
     height: 50px;
@@ -55,7 +55,8 @@ li {
     flex-basis: 15%;
     text-align: center;
     text-transform: uppercase;
-    transition: 0.3s;
+    transition: 0.2s;
+    z-index: 0;
 }
 
 li a {
@@ -66,14 +67,14 @@ li a {
     letter-spacing: 5px;
     opacity: 0.5;
     font-weight: bold;
+    z-index: 1;;
 
 }
 li:hover a {
-    opacity: 1;
+    opacity: 0.9;
 }
 
 li:hover {
-    border: 1px solid aliceblue;
-    box-shadow: 0px 0px 3px 3px rgba(229, 228, 228, 0.2);
-    opacity: 0.8;
+    border: 1px solid rgba(240, 240, 240, 0.5);
+    box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.1);
 }
