--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
     font-family: "Montserrat", sans-serif;
     list-style: none;
     box-sizing: border-box;
+    font-size: 10px;
     
 }
 
@@ -18,11 +19,14 @@ body {
 /* MENU */
 .menu {
     position: fixed;
-    left:10px;
-    top: 15px;
-    font-size: 3.5em;
+    right:15px;
+    top: 20px;
     transition: .2s linear;
     color: #333;
+}
+
+.menu i {
+    font-size: 3.5em;
 }
 
 nav {
@@ -33,10 +37,11 @@ nav {
     top: -40px;
     background-color: #333;
     transition: .2s linear;
+    min-width: 1028px;
 }
 
 .menu.on {
-    top: 55px;
+    top: 60px;
 }
 
 nav.on {
@@ -63,8 +68,8 @@ li a {
     display: block;
     color:aliceblue;
     line-height: 28px;
-    font-size: 1.5em;
-    letter-spacing: 5px;
+    font-size: 1.6em;
+    letter-spacing: 7px;
     opacity: 0.5;
     font-weight: bold;
     z-index: 1;;
@@ -77,4 +82,51 @@ li:hover a {
 li:hover {
     border: 1px solid rgba(240, 240, 240, 0.5);
     box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.1);
+}
+
+/* BANNER */
+
+.member {
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    overflow: hidden;
+    position: relative;
+    background-color: #ddd;
+    z-index: -1;
+}
+
+.member img.color {
+    position: absolute;
+    right: 50px;
+    bottom: 0;
+    height: 55%;
+}
+.member img.gray {
+    position: relative;
+    left: -25vw;
+    top: -25%;
+    width: 100%;
+    min-height: 125%;
+    opacity: 0.2;
+    z-index: -1;
+}
+.member .info {
+    position: absolute;
+    top: 20%;
+    right:5%;
+    text-transform: uppercase;
+    text-align: end;
+    letter-spacing: 5px;
+    color:#333;
+}
+
+.info h1 {
+    font-size: 5rem;
+    text-transform: uppercase;
+}
+.info h2 {
+    padding-top: 2rem;
+    font-size: 4rem;
+    text-transform: uppercase;
 }
