--- a/style/style.css
+++ b/style/style.css
@@ -98,9 +98,10 @@ li:hover {
 
 .member img.color {
     position: absolute;
-    right: 50px;
+    right: 0%;
     bottom: 0;
     height: 55%;
+    animation: color 7s linear infinite;
 }
 .member img.gray {
     position: relative;
@@ -108,25 +109,71 @@ li:hover {
     top: -25%;
     width: 100%;
     min-height: 125%;
-    opacity: 0.2;
     z-index: -1;
+    animation: gray 7s linear infinite;
 }
 .member .info {
     position: absolute;
     top: 20%;
-    right:5%;
+    right:7%;
     text-transform: uppercase;
     text-align: end;
-    letter-spacing: 5px;
     color:#333;
+    animation: info 7s linear infinite;
 }
 
 .info h1 {
     font-size: 5rem;
-    text-transform: uppercase;
 }
 .info h2 {
     padding-top: 2rem;
     font-size: 4rem;
-    text-transform: uppercase;
+    letter-spacing: 5px;
+    
 }
+
+@keyframes color {
+    0% {
+        transform: translateX(0);
+        opacity: 0;
+    }
+    5% {opacity: 0;}
+    10% {opacity: 1}
+    90% {opacity: 1}
+    95% {opacity: 0}
+    100% {
+        transform: translateX(-3%);
+        opacity: 0;
+    }
+}
+
+@keyframes gray {
+    0% {
+        transform: scale(1);
+        opacity: 0;
+    }
+    5% {opacity: 0;}
+    10% {opacity: 0.15}
+    90% {opacity: 0.15}
+    95% {opacity: 0}
+    100% {
+        transform: scale(1.1);
+        opacity: 0;
+    }
+}
+
+@keyframes info {
+    0% {
+        transform: scale(1);
+        opacity: 0;
+    }
+    5% {opacity: 0;}
+    10% {opacity: 1}
+    90% {opacity: 1}
+    95% {opacity: 0}
+    100% {
+        transform: scale(1.1);
+        opacity: 0;
+    }
+}
+
