--- a/style/style.css
+++ b/style/style.css
@@ -231,10 +231,8 @@ img.portrait {
 }
 
 .me aside h3 {
-    font-size: 3rem;
     padding-bottom: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 5px;
+    text-align: left;
 }
 .me aside p {
     font-size: 1.5rem;
@@ -468,6 +466,7 @@ section.contact {
     height: 12rem;
 }
 .contact button {
+    color: #fff;
     display: inline-block;
     font-size: 1.5rem;
     line-height: 3rem;
@@ -485,9 +484,35 @@ section.contact {
 }
 .contact button:hover {
     cursor: pointer;
-    background-color: #666;
+    background-color: #444;
+    color: #fff;
 }
+
 .contact .socials {
-    flex-basis: 40%;
+    flex-basis: 30%;
     padding-left: 3%;
+}
+
+.contact .social i {
+    font-size: 2rem;
+    line-height: 5rem;
+    padding-right: 30px;
+    color: #555;
+}
+.contact .social span {
+    font-size: 1.8rem;
+    line-height: 5rem;
+    color: #555;
+}
+
+/*FOOTER*/
+
+footer {
+    background-color: #777;
+    text-align: center;
+    padding: 10px 0 10px 0;
+    color: #fafafa;
+}
+footer p {
+    text-shadow: black;
 }
