--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
     list-style: none;
     box-sizing: border-box;
     font-size: 10px;
+    scroll-behavior: smooth;
     
 }
 
@@ -70,7 +71,9 @@ nav ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-right: 5%;
 }
+
 
 nav ul li {
     flex-basis: 15%;
@@ -78,6 +81,7 @@ nav ul li {
     text-transform: uppercase;
     transition: 0.2s;
     z-index: 0;
+    /* border: 1px solid transparent; */
 }
 
 li a {
@@ -89,16 +93,32 @@ li a {
     opacity: 0.5;
     font-weight: bold;
     z-index: 1;;
+    transition: 0.1s;
 
 }
 nav ul li:hover a {
-    opacity: 0.9;
+    opacity: 1;
 }
 
-nav ul li:hover {
+/* nav ul li:hover {
     border: 1px solid rgba(240, 240, 240, 0.5);
-    box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.1);
+    box-shadow: 0px 0px 3px 2px rgba(100, 100, 100, 0.1);
+} */
+
+nav ul li:first-of-type {
+    flex-basis: 1%;
 }
+
+nav ul li:first-of-type i {
+    font-size: 1.6rem;
+    line-height: 28px;
+}
+
+nav ul li:first-of-type:hover {
+    border: none;
+    box-shadow: none;
+}
+
 
 /* BANNER */
 
@@ -117,7 +137,7 @@ nav ul li:hover {
     right: 0%;
     bottom: 0;
     height: 55%;
-    animation: color 6s linear infinite;
+    animation: color 6s linear infinite both;
 }
 .member img.gray {
     position: relative;
@@ -126,7 +146,7 @@ nav ul li:hover {
     width: 100%;
     min-height: 125%;
     z-index: -1;
-    animation: gray 6s linear infinite;
+    animation: gray 6s linear infinite both;
 }
 .member .info {
     position: absolute;
@@ -135,7 +155,7 @@ nav ul li:hover {
     text-transform: uppercase;
     text-align: end;
     color:#333;
-    animation: info 6s linear infinite;
+    animation: info 6s linear infinite both;
 }
 
 .info h1 {
@@ -169,7 +189,7 @@ nav ul li:hover {
         opacity: 0;
     }
     3% {opacity: 0;}
-    9% {opacity: 0.16}
+    9% {opacity: 0.15}
     91% {opacity: 0.15}
     97% {opacity: 0}
     100% {
@@ -205,29 +225,31 @@ margin: 0 auto;
 
 }
 
-/*ABOUT ME*/
+/*ME*/
 
 section.me {
     display: flex;
     width: 100%;
-    min-height: 50vh; 
+    min-height: 40vh; 
     overflow: hidden;
+    justify-content: center;
     align-items: center;
+    padding-top: 7%;
 }
 
 .me div {
-    flex-basis: 50%;
+    flex-basis: 45%;
     overflow: hidden;
 }
 img.portrait {
-    width: 100%;
-    padding: 10%;
+    width: 80%;
+    padding: 3%;
 }
 
 .me aside {
-    flex-basis: 50%;
+    flex-basis: 45%;
     text-align: justify;
-    padding: 10%;
+    padding: 5%;
 }
 
 .me aside h3 {
@@ -238,12 +260,6 @@ img.portrait {
     font-size: 1.5rem;
 }
 
-section.prices {
-    display: flex;
-    width: 100%;
-    min-height: 50vh;
-    background-color: aliceblue; 
-}
 
 /*GALLERY*/
 
@@ -254,7 +270,7 @@ section.gallery {
     overflow: hidden;
     flex-wrap: wrap;
     justify-content: center;
-    padding-bottom: 5%;
+    padding: 5% 0 7% 0;
 }
 
 .gallery div:first-child {
@@ -274,16 +290,23 @@ section.gallery {
      box-sizing: border-box;
     flex-basis: 30%;
     padding: 15px;
+
 }
 
 .images img {
     width: 100%;
     border: rgba(0, 0, 0, 0.4) solid 1px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease;
+    filter: grayscale(100%) contrast(40%) brightness(1.4); 
+    transition: transform 0.3s ease, filter 0.3s ease;
 }
+
 .images img:hover {
-    transform: scale(1.05);
+    transform: scale(1.03);
+    filter: grayscale(0%) contrast(100%) brightness(1);
+}
+.gallery div#scrollMotto {
+    flex-basis: 100%;
 }
 
 /*MOTTO*/
@@ -293,8 +316,7 @@ section.motto {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    min-height: 70vh;
-    padding: 5% 0 5% 0;
+    min-height: 80vh;
     background-image: url(../img/motto_image.jpeg);
     background-size: cover;
     background-position: center;
@@ -327,6 +349,7 @@ section.motto {
 
 section.packages {
     display: flex;
+    width: 100%;
     flex-wrap: wrap;
     padding: 7% 0 7% 0;
     justify-content: space-around;
@@ -368,13 +391,12 @@ section.packages {
     background-color:rgba(240, 240, 240, 0.3);
     border: rgba(0, 0, 0, 0.1) solid 1px;
     box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.3);
-    transition: 0.2s;
+    transition: 0.2s ease;
     z-index:auto;
    }
 
 .column:hover {
-    transform: scale(1.05);
-    cursor: pointer;
+    transform: scale(1.03);
 }
 
 .column img {
@@ -406,33 +428,38 @@ section.packages {
     text-align: center;
 }
 
-.column p.price {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: stretch;
-   }
- 
 .column p.price span {
-    border: 2px solid black;
-    background-color: #fff;
-    padding: 10px;
+    border: 1px solid #777;
+    background-color: #999;
+    color: white;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 5px;
+    letter-spacing: 2px;
+    transition: 0.2s;
    }
 
-.price {
+.column p.price span:hover{
+    background-color: #444;
+   }
+
+p.price {
 flex-grow: 1;
 line-height: 30px;
 display: flex;
 flex-direction: column;
 justify-content: flex-end;
+min-width: 70%;
+align-self: center;
+cursor: pointer;
 }
 
 /*CONTACT*/
 
 section.contact {
     width: 100%;
-    min-height: 50vh;
+    min-height: 80vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -515,4 +542,135 @@ footer {
 }
 footer p {
     text-shadow: black;
+}
+
+/*MODAL*/
+
+.modal-wrap {
+    display: none;
+}
+
+.modal-wrap.active {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+main.blur, header.blur {
+    filter: blur(1px);
+}
+
+
+.modal {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 60%;
+height: 70%;
+min-width: 500px;
+background-color: #fafafa;
+padding: 25px;
+border: #555 solid 3px;
+box-shadow: 0 0 10px 3px rgba(124, 124, 124, 0.3);
+}
+
+.modal1, .modal2, .modal3 {
+   display: none;
+}
+
+ .modal1.active, .modal2.active, .modal3.active {
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: stretch;
+    overflow: scroll;
+  
+}
+.modal img {
+    flex-basis: 37%;
+    width: 100%;
+    align-self: flex-start;
+    border-radius: 15%;
+    border: rgba(0, 0, 0, 0.1) solid 1px;
+    box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.3);
+    padding:10px;
+    
+   }
+
+.modal .aside {
+    flex-basis: 60%;
+    padding: 10px;
+    padding-left: 20px;
+    align-self: flex-start;
+   }
+
+.modal h4 {
+    align-self: center;
+    flex-basis: 100%;
+    text-align: center;
+    font-size: 2.4rem;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 10px 0 10px;
+    color: #444;
+}
+
+.modal ul li {
+   list-style:circle;
+   line-height: 2rem;
+   font-size: 1.5rem;
+
+}
+.modal ul {
+    padding-left: 15px;
+}
+
+.modal p:first-child {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #444;
+}
+
+.modal p:nth-child(2) {
+    font-size: 1.6rem;
+    letter-spacing: 2px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #444;
+  
+}
+
+ span.hide {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 2.4rem;
+    background-color:#555;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 3.8rem;
+    transform: translate(50%, -50%);
+    cursor: pointer;
+    font-weight: bolder;
+    color:#ccc;
+    transition: 0.2s;
+}
+
+span.hide:hover {
+    color: white;
 }
