--- a/style/style.css
+++ b/style/style.css
@@ -249,15 +249,16 @@ img.portrait {
 .me aside {
     flex-basis: 45%;
     text-align: justify;
-    padding: 5%;
+    padding: 3%;
 }
 
 .me aside h3 {
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
     text-align: left;
 }
 .me aside p {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
 }
 
 
@@ -571,6 +572,7 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 width: 60%;
+max-width: 1240px;
 height: 70%;
 min-width: 500px;
 background-color: #fafafa;
