--- a/style/style.css
+++ b/style/style.css
@@ -137,7 +137,7 @@ nav ul li:first-of-type:hover {
     right: 0%;
     bottom: 0;
     height: 55%;
-    animation: color 6s linear infinite both;
+    animation: color 5s linear infinite both;
 }
 .member img.gray {
     position: relative;
@@ -146,7 +146,7 @@ nav ul li:first-of-type:hover {
     width: 100%;
     min-height: 125%;
     z-index: -1;
-    animation: gray 6s linear infinite both;
+    animation: graay 5s linear infinite both;
 }
 .member .info {
     position: absolute;
@@ -155,7 +155,7 @@ nav ul li:first-of-type:hover {
     text-transform: uppercase;
     text-align: end;
     color:#333;
-    animation: info 6s linear infinite both;
+    animation: info 5s linear infinite both;
 }
 
 .info h1 {
@@ -174,8 +174,8 @@ nav ul li:first-of-type:hover {
         opacity: 0;
     }
     3% {opacity: 0;}
-    9% {opacity: 1}
-    91% {opacity: 1}
+    6% {opacity: 1}
+    94% {opacity: 1}
     97% {opacity: 0}
     100% {
         transform: translateX(-3%);
@@ -183,14 +183,14 @@ nav ul li:first-of-type:hover {
     }
 }
 
-@keyframes gray {
+@keyframes graay {
     0% {
         transform: scale(1);
         opacity: 0;
     }
     3% {opacity: 0;}
-    9% {opacity: 0.15}
-    91% {opacity: 0.15}
+    6% {opacity: 0.15}
+    94% {opacity: 0.15}
     97% {opacity: 0}
     100% {
         transform: scale(1.1);
@@ -204,8 +204,8 @@ nav ul li:first-of-type:hover {
         opacity: 0;
     }
     3% {opacity: 0;}
-    9% {opacity: 1}
-    91% {opacity: 1}
+    6% {opacity: 1}
+    94% {opacity: 1}
     97% {opacity: 0}
     100% {
         transform: scale(1.1);
