--- a/style/style.css
+++ b/style/style.css
@@ -225,7 +225,7 @@ margin: 0 auto;
 
 }
 
-/*ME*/
+/* ME */
 
 section.me {
     display: flex;
@@ -235,12 +235,17 @@ section.me {
     justify-content: center;
     align-items: center;
     padding-top: 7%;
+   
 }
 
 .me div {
     flex-basis: 45%;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+ 
 }
+
 img.portrait {
     width: 80%;
     padding: 3%;
@@ -250,6 +255,21 @@ img.portrait {
     flex-basis: 45%;
     text-align: justify;
     padding: 3%;
+    transition: 1s;
+
+}
+
+.move1 {
+    transform: translateX(0%);
+}
+
+.move2 {
+    transform: translateX(120%);
+}
+
+.move3 {
+    transform: translateX(-120%);
+
 }
 
 .me aside h3 {
@@ -623,7 +643,7 @@ box-shadow: 0 0 10px 3px rgba(124, 124, 124, 0.3);
 }
 .modal img {
     flex-basis: 37%;
-    width: 100%;
+    width: 30%;
     align-self: flex-start;
     border-radius: 15%;
     border: rgba(0, 0, 0, 0.1) solid 1px;
