--- a/style/style.css
+++ b/style/style.css
@@ -230,7 +230,7 @@ margin: 0 auto;
 section.me {
     display: flex;
     width: 100%;
-    min-height: 40vh; 
+    min-height: 80vh; 
     overflow: hidden;
     justify-content: center;
     align-items: center;
@@ -312,7 +312,7 @@ section.gallery {
      box-sizing: border-box;
     flex-basis: 30%;
     padding: 15px;
-
+    transition: 1s;
 }
 
 .images img {
@@ -337,6 +337,16 @@ section.gallery {
 
 .move2gallery {
     transform: translateY(-400%);
+}
+
+.hide1 {
+    transform: scale(0.7);
+    opacity: 0;
+}
+
+.hide2 {
+    transform: scale(1);
+    opacity: 1;
 }
 
 /*MOTTO*/
