--- a/style/style.css
+++ b/style/style.css
@@ -2,13 +2,12 @@
 * {
     margin: 0;
     padding: 0;
+    font-size: 10px;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
     list-style: none;
     box-sizing: border-box;
-    font-size: 10px;
     scroll-behavior: smooth;
-    
 }
 
 body {
@@ -119,7 +118,6 @@ nav ul li:first-of-type:hover {
     box-shadow: none;
 }
 
-
 /* BANNER */
 
 .member {
@@ -139,6 +137,7 @@ nav ul li:first-of-type:hover {
     height: 55%;
     animation: color 5s linear infinite both;
 }
+
 .member img.gray {
     position: relative;
     left: -25vw;
@@ -148,6 +147,7 @@ nav ul li:first-of-type:hover {
     z-index: -1;
     animation: graay 5s linear infinite both;
 }
+
 .member .info {
     position: absolute;
     top: 20%;
@@ -161,11 +161,11 @@ nav ul li:first-of-type:hover {
 .info h1 {
     font-size: 5rem;
 }
+
 .info h2 {
     padding-top: 2rem;
     font-size: 4rem;
-    letter-spacing: 5px;
-    
+    letter-spacing: 5px; 
 }
 
 @keyframes color {
@@ -222,7 +222,6 @@ align-items: center;
 min-height: 100vh;
 max-width: 1240px;
 margin: 0 auto;
-
 }
 
 /* ME */
@@ -235,7 +234,6 @@ section.me {
     justify-content: center;
     align-items: center;
     padding-top: 7%;
-   
 }
 
 .me div {
@@ -243,7 +241,6 @@ section.me {
     width: 100%;
     height: 100%;
     transition: 1s;
- 
 }
 
 img.portrait {
@@ -256,13 +253,13 @@ img.portrait {
     text-align: justify;
     padding: 3%;
     transition: 1s;
-
 }
 
 .me aside h3 {
     padding-bottom: 1rem;
     text-align: left;
 }
+
 .me aside p {
     font-size: 1.6rem;
     line-height: 2.2rem;
@@ -291,6 +288,7 @@ section.gallery {
     justify-content: center;
     padding: 5% 0 7% 0;
 }
+
 .gallery h3 {
     transition: 1s;
 }
@@ -298,8 +296,8 @@ section.gallery {
 .gallery div:first-child {
     flex-basis: 100%;
     padding: 3% 0 3% 0;
-    
 }
+
 .gallery div:first-child h3 {
     line-height: 5rem;
     font-size: 3rem;
@@ -327,6 +325,7 @@ section.gallery {
     transform: scale(1.03);
     filter: grayscale(0%) contrast(100%) brightness(1);
 }
+
 .gallery div#scrollMotto {
     flex-basis: 100%;
 }
@@ -376,6 +375,7 @@ section.motto {
     padding-bottom: 3%;
     transition: 1s;
 }
+
 .motto .text {
    font-size: 2rem;
    line-height: 4rem;
@@ -385,6 +385,7 @@ section.motto {
    align-self: center;
    transition: 1s;
 }
+
 .motto .author {
     line-height: 4rem;
     font-size: 1.5rem;
@@ -425,6 +426,7 @@ section.packages {
     padding-bottom: 4%;
     transition: 1.5s;
 }
+
 .packages h3 i {
     font-size: 3rem;
 }
@@ -455,12 +457,11 @@ section.packages {
     background-color:rgba(240, 240, 240, 0.3);
     border: rgba(0, 0, 0, 0.1) solid 1px;
     box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.3);
-    transition: 0.2s ease;
-    z-index:auto;
+    z-index: auto;
    }
 
 .column:hover {
-    transform: scale(1.03);
+    scale: 1.03;
 }
 
 .column img {
@@ -520,7 +521,7 @@ p.price {
 }
 
 .packages .column1, .packages .column2, .packages .column3 {
-    transition: 1.5s;
+    transition: scale 0.2s ease, transform 1.5s ease;
 }
 
 .move9 {
@@ -533,7 +534,6 @@ p.price {
 .move11 {
     transform: translateX(0%);
 }
-
 
 /*CONTACT*/
 
@@ -569,6 +569,7 @@ section.contact {
     resize: vertical;
     
 }
+
 .contact input {
     line-height: 2rem;
 }
@@ -576,6 +577,7 @@ section.contact {
 .contact textarea {
     height: 12rem;
 }
+
 .contact button {
     color: #fff;
     display: inline-block;
@@ -593,6 +595,7 @@ section.contact {
     box-shadow: 0px 0px 3px 3px rgba(240, 240, 240, 0.5); 
     transition: 0.2s;
 }
+
 .contact button:hover {
     cursor: pointer;
     background-color: #444;
@@ -610,6 +613,7 @@ section.contact {
     padding-right: 30px;
     color: #555;
 }
+
 .contact .social span {
     font-size: 1.8rem;
     line-height: 5rem;
@@ -667,7 +671,6 @@ section.contact {
     transform: translateX(0);
 }
 
-
 /*FOOTER*/
 
 footer {
@@ -676,6 +679,7 @@ footer {
     padding: 5px 0 5px 0;
     color: #fafafa;
 }
+
 footer p {
     text-shadow: black;
 }
@@ -699,7 +703,6 @@ footer p {
 main.blur, header.blur {
     filter: blur(1px);
 }
-
 
 .modal {
 position: absolute;
@@ -732,6 +735,7 @@ box-shadow: 0 0 10px 3px rgba(124, 124, 124, 0.3);
     overflow: scroll;
   
 }
+
 .modal img {
     flex-basis: 37%;
     width: 30%;
@@ -740,7 +744,6 @@ box-shadow: 0 0 10px 3px rgba(124, 124, 124, 0.3);
     border: rgba(0, 0, 0, 0.1) solid 1px;
     box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.3);
     padding:10px;
-    
    }
 
 .modal .aside {
@@ -765,8 +768,8 @@ box-shadow: 0 0 10px 3px rgba(124, 124, 124, 0.3);
    list-style:circle;
    line-height: 2rem;
    font-size: 1.5rem;
-
 }
+
 .modal ul {
     padding-left: 15px;
 }
@@ -787,7 +790,6 @@ box-shadow: 0 0 10px 3px rgba(124, 124, 124, 0.3);
     text-transform: uppercase;
     font-weight: 600;
     color: #444;
-  
 }
 
  span.hide {
