--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,7 @@ h3 {
     top: 20px;
     transition: .2s linear;
     color: #333;
+    z-index: 3;
 }
 
 .menu i {
@@ -298,14 +299,6 @@ section.gallery {
     padding: 3% 0 3% 0;
 }
 
-.gallery div:first-child h3 {
-    line-height: 5rem;
-    font-size: 3rem;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-}
-
 .images {
      box-sizing: border-box;
     flex-basis: 30%;
@@ -367,11 +360,6 @@ section.motto {
 }
 
 .motto h3 {
-    line-height: 5rem;
-    font-size: 3rem;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 5px;
     padding-bottom: 3%;
     transition: 1s;
 }
@@ -457,7 +445,7 @@ section.packages {
     background-color:rgba(240, 240, 240, 0.3);
     border: rgba(0, 0, 0, 0.1) solid 1px;
     box-shadow: 0px 0px 3px 2px rgba(240, 240, 240, 0.3);
-    z-index: auto;
+    z-index: 1;
    }
 
 .column:hover {
@@ -604,7 +592,7 @@ section.contact {
 
 .contact .socials {
     flex-basis: 30%;
-    padding-left: 3%;
+    padding-left: 2%;
 }
 
 .contact .social i {
@@ -812,4 +800,155 @@ box-shadow: 0 0 10px 3px rgba(124, 124, 124, 0.3);
 
 span.hide:hover {
     color: white;
+}
+
+@media screen and (max-width: 1024px) {
+
+    body {
+        min-width: 768px;
+    }
+
+    h3 {
+        font-size: 2.7rem;
+    }
+
+    /* MENU */ 
+
+    nav {
+        min-width: 768px;
+    }
+    
+    nav ul {
+        padding-right: 2%;
+    }
+    
+    li a {
+        font-size: 1.4em;
+        letter-spacing: 5px;
+    }
+  
+    nav ul li:first-of-type {
+        flex-basis: 3%;
+    }
+    
+    nav ul li:first-of-type i {
+        font-size: 1.4rem;
+    } 
+
+    /* BANNER */
+
+    .member img.color {
+        height: 50%;
+    }
+
+    .member img.gray {
+        left: -30vw;
+        top: -10%;
+        width: 120%;
+        min-height: 120%;
+    }
+
+    .member .info {
+        top: 18%;
+        right:0%;
+        left: 0%;
+        text-align: center;
+    }
+
+    .info h1 {
+        font-size: 4.4rem;
+        letter-spacing: 3px;
+    }
+
+    .info h2 {
+        font-size: 3.5rem;
+    }
+
+    /* ME */
+
+    img.portrait {
+        width: 90%;
+        padding: 1%;
+    }
+
+    .me aside {
+        padding: 1%;
+    }
+
+    .me aside p {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+    /*GALLERY*/
+
+    .images {
+        flex-basis: 40%;
+        padding: 25px;
+    }
+    
+    /*PACKAGES*/
+    
+    .packages h3 i {
+        font-size: 2.7rem;
+    }
+
+    .column>* {
+        padding-bottom: 15px;
+    }
+
+    .column h4 {
+        font-size: 1.3rem;
+    }
+    .column h4:first-of-type {
+        font-size: 1.5rem;
+    }
+
+    .column {
+        flex-basis: 29%;
+        padding: 10px;
+    }
+
+    .column p {
+        font-size: 1.2rem;
+    }
+
+    .column p:first-of-type {
+        font-size: 1.2rem;
+        padding-top: 15px;
+    }
+
+    .column p.price span {
+        font-size: 1.1rem;
+    }
+
+    p.price {
+        min-width: 80%;
+    }
+
+    /*CONTACT*/
+
+    .contact .socials {
+        flex-basis: 40%;
+        padding-left: 1%;
+    }
+
+    .contact .social i {
+        font-size: 1.8rem;
+        padding-right: 25px;
+    }
+
+    .contact .social span {
+        font-size: 1.6rem;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    
+body {
+    min-width: 320px;
+
+  
+}
 }
