--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,7 @@ h3 {
     transition: .2s linear;
     color: #333;
     z-index: 3;
+    cursor: pointer;
 }
 
 .menu i {
@@ -93,7 +94,7 @@ li a {
     opacity: 0.5;
     font-weight: bold;
     z-index: 1;;
-    transition: 0.1s;
+    transition: opacity 0.1s;
 
 }
 nav ul li:hover a {
@@ -948,7 +949,52 @@ span.hide:hover {
     
 body {
     min-width: 320px;
-
-  
 }
+
+.menu {
+    z-index: 5;
+}
+
+nav {
+    z-index: 4;
+    min-width: 320px;
+    overflow: hidden;
+    transition: height 0.3s ease;
+}
+
+nav.on {
+    height: 50%;
+    overflow: scroll;
+}
+
+.menu.on {
+    top: 20px;
+}
+
+
+nav ul {
+    display: block;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+nav ul li {
+    flex-basis: 100%; 
+    width: 100%;
+    text-align: center; 
+}
+
+li a {
+    padding: 15px;
+    font-size: 1.6em;
+    letter-spacing: 10px;
+}
+
+.menu.on i::before {
+    content: "\f00d";
+    color: aliceblue;
+}
+
+
 }
