--- a/style/style.css
+++ b/style/style.css
@@ -947,54 +947,235 @@ span.hide:hover {
 
 @media screen and (max-width: 768px) {
     
-body {
-    min-width: 320px;
-}
+    body {
+        min-width: 320px;
+    }
 
-.menu {
-    z-index: 5;
-}
+    h3 {
+        font-size: 2.3rem;
+    }
 
-nav {
-    z-index: 4;
-    min-width: 320px;
-    overflow: hidden;
-    transition: height 0.3s ease;
-}
+    .menu {
+        right: 8px;
+        top: 14px;
+    }
 
-nav.on {
-    height: 50%;
-    overflow: scroll;
-}
+    .menu i {
+        font-size: 3.3em;
+    }
 
-.menu.on {
-    top: 20px;
-}
+    .menu {
+        z-index: 5;
+    }
+
+    nav {
+        z-index: 4;
+        min-width: 320px;
+        overflow: hidden;
+        transition: height 0.3s ease;
+    }
+
+    nav.on {
+        height: 50%;
+        overflow: scroll;
+    }
+
+    .menu.on {
+        top: 14px;
+    }
 
 
-nav ul {
-    display: block;
-    padding: 0;
-    margin: 0;
-    text-align: center;
-}
+    nav ul {
+        display: block;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+    }
 
-nav ul li {
-    flex-basis: 100%; 
-    width: 100%;
-    text-align: center; 
-}
+    nav ul li {
+        flex-basis: 100%; 
+        width: 100%;
+        text-align: center; 
+    }
 
-li a {
-    padding: 15px;
-    font-size: 1.6em;
-    letter-spacing: 10px;
-}
+    li a {
+        padding: 15px;
+        font-size: 1.6em;
+        letter-spacing: 10px;
+    }
 
-.menu.on i::before {
-    content: "\f00d";
-    color: aliceblue;
-}
+    .menu.on i::before {
+        content: "\f00d";
+        color: aliceblue;
+    }
 
+    /* BANNER */
+
+    .member img.color {
+        height: 45%;
+        right: -25%;
+    }
+
+    .member img.gray {
+        left: -50vh;
+        top: -10%;
+        width: auto;
+        min-height: 110%;
+        
+    }
+
+    .member .info {
+        top: 13%;
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+
+    .info h1 {
+        font-size: 3.2rem;
+        letter-spacing: 2px;
+    }
+
+    .info h2 {
+        font-size: 2.5rem;
+    }
+
+    /* ME */
+
+    section.me {
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    img.portrait {
+        width: 100%;
+        padding: 12%;
+        padding-top: 0;
+    }
+
+    .me div {
+        flex-basis: 100%;
+    }
+
+    .me aside {
+        flex-basis: 100%;
+        padding: 12%;
+    }
+
+    .me aside p {
+        font-size: 1.3rem;
+        line-height: 1.8rem;
+    }
+
+    /*GALLERY*/
+
+    .images {
+        flex-basis: 80%;
+        padding: 15px;
+    }
+
+    /*MOTTO*/
+
+    section.motto {
+        background-size:cover;
+        background-position: center;
+        background-attachment:scroll;
+    }
+
+    .motto h3 {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .motto .text {
+        font-size: 1.6rem;
+        line-height: 3rem;
+        width: 80%;
+    }
+
+    .motto .author {
+        line-height: 4rem;
+        font-size: 1.8rem;
+    }
+
+    /*PACKAGES*/
+
+    section.packages {
+        flex-direction: column;
+    }
+
+    .packages h3 i {
+        font-size: 2.3rem;
+    }
+
+    .column>* {
+        padding-bottom: 15px;
+    }
+
+    .column {
+        margin-left: 12%;
+        margin-right: 12%;
+        margin-bottom: 12%;
+    }
+
+    /*CONTACT*/
+
+    section.contact {
+        flex-direction: column;
+    }
+
+    .contact .socials {
+        flex-basis: 100%;
+        margin-left: 12%;
+        margin-right: 12%;
+        margin-bottom: 12%;
+    }
+
+    .contact form {
+        flex-basis: 100%;
+        margin-left: 12%;
+        margin-right: 12%;
+        margin-bottom: 12%;
+        padding-right: 0;
+    }
+
+    /*MODAL*/
+
+    .modal {
+        width: 90%;
+        max-width: 640px;
+        height: 80%;
+        min-width: 320px;
+    }
+
+    .modal img {
+        flex-basis: 80%;
+        width: 100%;
+    }
+
+    .modal .aside {
+        flex-basis: 80%;
+        padding: 10px;
+        padding-left: 10px;
+    }
+
+    .modal h4 {
+        font-size: 1.8rem;
+        padding-bottom: 20px;
+    }
+
+    .modal ul li {
+    font-size: 1.2rem;
+    }
+
+    .modal p:first-child {
+        font-size: 1.4rem;
+        text-align: center;
+        padding-top: 20px;
+    }
+
+    .modal p:nth-child(2) {
+        font-size: 1.4rem;
+    }
 
 }
